# ratatouille

./: .gitignore  CLAUDE.md  LICENSE  README.md  all_cell_feature_summary.csv  mes_parser.py  ppt_composition.py  pyproject.toml  quick_colorbar.py  suite2p_parser.py
cook/JOE_juxtacellular_analysis/: status_report.xlsx  step1_waveform_curator.py  step2_visualize_single_cell_raster.py
cook/JS_juxtacelluar_analysis/: heatmap_clustering.py  jux_analysis.py  overview.py  raster_plot.py  status_report_PV_JUX.xlsx  step1_waveform_curator.py  step3_clustering_analysis.py  step4_feature_analysis.py  step5_feature_analysis2.py  step6_decomposition_analysis.py  step7_factor_analysis.py  step8_feature_summary.py  trial_wise.py
cook/JS_juxtacellular_analysis/: script01_WaveformCurator_DatasetOverview.py  script02_SingleCellExamples_TrialAvg.py  script04_FeatureSpace.py  video_test.py  (+13 more)
critic/: test_behavior_loader_bugs.py  test_hierarchical_data_structure.py  test_meta_data_structure.py  test_neural_data_structure.py  test_numpy_kit_bugs.py  test_routing_bugs.py  test_simplified_behavior_loader.py
recipe/: custom_first_puff_analysis.json  custom_thermal_analysis.json  default_behavior_only.json  default_behavior_only_joe_data.json  default_behavior_only_locomotion_analysis.json  default_behavior_only_long_trial.json  default_behavior_only_oddball.json  default_ephys.json  default_ephys_abf_sweep.json  default_two_photon.json  default_two_photon_locomotion_trials.json  default_two_photon_mes_parser.json  default_two_photon_wo_trial_split.json  matt_two_photon_mes_parser.json
(+209 files in other folders)
